--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,7 +8,7 @@ button {
   border: none;
   font-size: medium;
   font-family: "Bungee";
-  background-color:#4056A1;
+  background-color:#dbb1af;
   color: #ffffff;
 }
 
