--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,49 +1,72 @@
+
 article.tweet {
-  display: flex;
-  flex-direction: column;
-  border: 0.2em solid #50504b;
-  padding: 0.4em;
-  margin: 1em 0.5em;
-}
-article.tweet header {
-  display: flex;
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
   padding: 0.5em;
-}
-article.tweet header img {
-  max-height: 2.3em;
-  max-width: 2.3em;
-  padding-right: 0.5em;
-}
-article.tweet header div.name {
-  display: flex;
-  align-items: center;
-  font-weight: 200;
-}
-article.tweet header div.id {
-  color: #c8c8e1;
-  font-weight: 400;
-}
-article.tweet div.content {
-  padding: 1.2em 0.8em;
-  border-bottom: #50504b 0.2em solid;
-}
-article.tweet footer {
-  display: flex;
-  justify-content: space-between;
-  font-size: 0.6em;
-  align-content: center;
-  padding: 0.9em 1em 0.5em;
-}
-article.tweet footer span.fas {
-  padding: 0.1em;
-}
-article.tweet footer span.fas:hover {
-  color: #be9637;
+  border: 2px solid black;
+  margin: 0 0.1em 2em;
+  transition: box-shadow 0.25s;
 }
 
 article.tweet:hover {
-  box-shadow: 0.3em 0.3em #bebed2;
+  box-shadow: 19px 4px 2px 1px #C9CAE2;
+}
+
+article.tweet header {
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  margin: 0 0 1em;
+}
+
+article.tweet header div {
+  align-items: center;
+}
+
+div.profile-pic-username i {
+  margin-right: 0.5em;
+}
+
+div.profile-pic-username img {
+  height: 45px;
+  margin-right: 0.25em;
+}
+
+.handle {
+  color: #dbb1af;
+}
+
+p.handle {
+  margin: 0;
+}
+
+section.tweet-content p {
+  font-size: 0.8em;
+  font-weight: 600;
+  margin: 0 0.5em;
+  padding-bottom: 0.5em;
+  border-bottom: 2px solid black;
+  word-wrap: break-word;
+}
+
+article.tweet footer {
+  margin: 0.25em 0.5em 0.5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+article.tweet footer p {
+  margin: 0;
+  font-size: 0.5em;
+}
+
+article.tweet footer div {
+  width: 55px;
+  display: flex;
+  justify-content: space-around;
+}
+
+article.tweet footer div i {
+  font-size: 14px;
+  color: #dbb1af;
+  cursor: pointer;
 }
