--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -41,6 +41,7 @@ main.container {
 .flex-container-row {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .flex-container-col {
